--- a/src/pages/certification.astro
+++ b/src/pages/certification.astro
@@ -8,135 +8,142 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
 ---
 
 <BaseLayout title={formattedContentTitle}>
-  <main>
-    <div class="overflow-hidden">
-      <section id="demo" data-scroll="mid" class="sec-big sec-big--dark sec-big--light">
-        <div class="w-layout-blockcontainer cont cont--cert w-container">
-          <div class="demo-h-wrap"></div>
-          <div class="col col-cert">
-            <div class="div-block-107">
-              <h2
-                class={clsx(
-                  "display-500 display-500--dark",
-                  typographyVariants({
-                    variant: "h2",
-                  })
-                )}
-              >
-                Supercharge your career with blockchain developer courses
-              </h2>
-              <p class="paragraph paragraph-certified">
-                Get Chainlink certified on Cyfrin, with hands-on learning in Web3, blockchain, tokenization, and smart
-                contracts. Prove your skills and readiness to lead Chainlink-powered projects.<br /><br />Learn to build
-                secure dApps using Chainlink's core services—Data Feeds, VRF, Automation, and CCIP—through a
-                developer-focused certification course.<br />‍<br />
-              </p>
-              <a
-                rel="noopener"
-                href="https://updraft.cyfrin.io/courses/chainlink-fundamentals"
-                target="_blank"
-                class="btn btn-primary btn-small btn-cert w-button">Start learning</a
-              >
-            </div>
-            <div class="margin-bottom space-4x"></div>
-            <div class="margin-bottom space-6x"></div>
-            <div>
-              <img src="/images/certification/image-certificate.svg" loading="lazy" alt="" class="image-22" />
-            </div>
+  <div class="overflow-hidden">
+    <section id="demo" data-scroll="mid" class="sec-big sec-big--dark sec-big--light">
+      <div class="w-layout-blockcontainer cont cont--cert w-container">
+        <div class="demo-h-wrap"></div>
+        <div class="col col-cert">
+          <div class="div-block-107">
+            <h2
+              class={clsx(
+                "display-500 display-500--dark",
+                typographyVariants({
+                  variant: "h2",
+                })
+              )}
+            >
+              Supercharge your career with blockchain developer courses
+            </h2>
+            <p class="paragraph paragraph-certified">
+              Get Chainlink certified on Cyfrin, with hands-on learning in Web3, blockchain, tokenization, and smart
+              contracts. Prove your skills and readiness to lead Chainlink-powered projects.<br /><br />Learn to build
+              secure dApps using Chainlink's core services—Data Feeds, VRF, Automation, and CCIP—through a
+              developer-focused certification course.<br />‍<br />
+            </p>
+            <a
+              rel="noopener"
+              href="https://updraft.cyfrin.io/courses/chainlink-fundamentals"
+              target="_blank"
+              class="btn btn-primary btn-small btn-cert w-button">Start learning</a
+            >
           </div>
-        </div>
-      </section>
-    </div>
-    <div class="w-layout-blockcontainer cont w-container">
-      <div class="sec-divider"></div>
-    </div>
-    <section class="sec-big sec-big--dark">
-      <div class="w-layout-blockcontainer cont w-container">
-        <div class="section-top">
-          <div class="sec-tag sec-tag--blue">THE PLATFORM</div>
-        </div>
-        <h2 class="display-500 display-500--white">The Learning Environment</h2>
-        <div class="platform-tabs">
-          <div class="plat-wrapper">
-            <div class="plat-placeholder"></div><img
-              src="/images/certification/image-200.png"
-              loading="lazy"
-              width="Auto"
-              height="Auto"
-              alt=""
-              srcset="/images/certification/image-200-p-500.png 500w, /images/certification/image-200.png 606w"
-              sizes="(max-width: 606px) 100vw, 606px"
-              class="plat-absolute plat-absolute--1"
-            /><img
-              src="/images/certification/image-201.png"
-              loading="lazy"
-              sizes="(max-width: 607px) 100vw, 607px"
-              srcset="/images/certification/image-201-p-500.png 500w, /images/certification/image-201.png 607w"
-              alt=""
-              class="plat-absolute plat-absolute--2"
-            /><img
-              src="/images/certification/image-1.png"
-              loading="lazy"
-              sizes="(max-width: 607px) 100vw, 607px"
-              srcset="/images/certification/image-1-p-500.png 500w, /images/certification/image-1.png 607w"
-              alt=""
-              class="plat-absolute plat-absolute--3"
-            />
-          </div>
-          <div class="academy-accordion">
-            <div class="acad-acc-item acad-acc-item--active">
-              <div class="acad-acc-item__top">
-                <h3 class="acad-acc-item__h">Hands-on learning built by experts</h3><img
-                  src="/images/certification/Tailless--Arrow-Down.svg"
-                  loading="lazy"
-                  alt=""
-                  class="acad-acc-item__arr"
-                />
-              </div>
-              <p class="acad-acc-item__desc">
-                Experience interactive learning where you&#x27;ll engage in experiential learning through practical use
-                cases and coding exercises. Dive deep into real-world applications and build your skills with guided
-                practice.
-              </p>
-            </div>
-            <div class="acard-acc-item__divider"></div>
-            <div class="acad-acc-item">
-              <div class="acad-acc-item__top">
-                <h3 class="acad-acc-item__h">Practice your skills</h3><img
-                  src="/images/certification/Tailless--Arrow-Down.svg"
-                  loading="lazy"
-                  width="16"
-                  alt=""
-                  class="acad-acc-item__arr"
-                />
-              </div>
-              <p class="acad-acc-item__desc">
-                Hands-on, high feedback quizzes and tests to grow your blockchain learning and challenge your smart
-                contract development.
-              </p>
-            </div>
-            <div class="acard-acc-item__divider"></div>
-            <div class="acad-acc-item">
-              <div class="acad-acc-item__top">
-                <h3 class="acad-acc-item__h">Become a certified Chainlink developer</h3><img
-                  src="/images/certification/Tailless--Arrow-Down.svg"
-                  loading="lazy"
-                  alt=""
-                  class="acad-acc-item__arr"
-                />
-              </div>
-              <p class="acad-acc-item__desc">
-                Achieve a prestigious certification that is highly regarded in the blockchain industry. This
-                certification not only validates your expertise but also significantly enhances your professional
-                credibility and career prospects.
-              </p>
-            </div>
-            <div class="acard-acc-item__divider"></div>
+          <div class="margin-bottom space-4x"></div>
+          <div class="margin-bottom space-6x"></div>
+          <div>
+            <img src="/images/certification/image-certificate.svg" loading="lazy" alt="" class="image-22" />
           </div>
         </div>
       </div>
     </section>
-  </main>
+  </div>
+  <div class="w-layout-blockcontainer cont w-container">
+    <div class="sec-divider"></div>
+  </div>
+  <section class="sec-big sec-big--dark">
+    <div class="w-layout-blockcontainer cont w-container">
+      <div class="section-top">
+        <div class="sec-tag sec-tag--blue">THE PLATFORM</div>
+      </div>
+      <h2
+        class={clsx(
+          "display-500 display-500--white",
+          typographyVariants({
+            variant: "h2",
+          })
+        )}
+      >
+        The Learning Environment
+      </h2>
+      <div class="platform-tabs">
+        <div class="plat-wrapper">
+          <div class="plat-placeholder"></div><img
+            src="/images/certification/image-200.png"
+            loading="lazy"
+            width="Auto"
+            height="Auto"
+            alt=""
+            srcset="/images/certification/image-200-p-500.png 500w, /images/certification/image-200.png 606w"
+            sizes="(max-width: 606px) 100vw, 606px"
+            class="plat-absolute plat-absolute--1"
+          /><img
+            src="/images/certification/image-201.png"
+            loading="lazy"
+            sizes="(max-width: 607px) 100vw, 607px"
+            srcset="/images/certification/image-201-p-500.png 500w, /images/certification/image-201.png 607w"
+            alt=""
+            class="plat-absolute plat-absolute--2"
+          /><img
+            src="/images/certification/image-1.png"
+            loading="lazy"
+            sizes="(max-width: 607px) 100vw, 607px"
+            srcset="/images/certification/image-1-p-500.png 500w, /images/certification/image-1.png 607w"
+            alt=""
+            class="plat-absolute plat-absolute--3"
+          />
+        </div>
+        <div class="academy-accordion">
+          <div class="acad-acc-item acad-acc-item--active">
+            <div class="acad-acc-item__top">
+              <h3 class="acad-acc-item__h">Hands-on learning built by experts</h3><img
+                src="/images/certification/Tailless--Arrow-Down.svg"
+                loading="lazy"
+                alt=""
+                class="acad-acc-item__arr"
+              />
+            </div>
+            <p class="acad-acc-item__desc">
+              Experience interactive learning where you&#x27;ll engage in experiential learning through practical use
+              cases and coding exercises. Dive deep into real-world applications and build your skills with guided
+              practice.
+            </p>
+          </div>
+          <div class="acard-acc-item__divider"></div>
+          <div class="acad-acc-item">
+            <div class="acad-acc-item__top">
+              <h3 class="acad-acc-item__h">Practice your skills</h3><img
+                src="/images/certification/Tailless--Arrow-Down.svg"
+                loading="lazy"
+                width="16"
+                alt=""
+                class="acad-acc-item__arr"
+              />
+            </div>
+            <p class="acad-acc-item__desc">
+              Hands-on, high feedback quizzes and tests to grow your blockchain learning and challenge your smart
+              contract development.
+            </p>
+          </div>
+          <div class="acard-acc-item__divider"></div>
+          <div class="acad-acc-item">
+            <div class="acad-acc-item__top">
+              <h3 class="acad-acc-item__h">Become a certified Chainlink developer</h3><img
+                src="/images/certification/Tailless--Arrow-Down.svg"
+                loading="lazy"
+                alt=""
+                class="acad-acc-item__arr"
+              />
+            </div>
+            <p class="acad-acc-item__desc">
+              Achieve a prestigious certification that is highly regarded in the blockchain industry. This certification
+              not only validates your expertise but also significantly enhances your professional credibility and career
+              prospects.
+            </p>
+          </div>
+          <div class="acard-acc-item__divider"></div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="section-2">
     <section class="sec-big sec-big--light-bg">
       <div class="w-layout-blockcontainer cont w-container">
@@ -144,15 +151,22 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
           <div class="sec-tag">OTHER LEARNINGS</div>
         </div>
         <div class="center-wrap">
-          <h2 class="display-500 display-500--dark">Access free learning resources</h2>
+          <h2
+            class={clsx(
+              "display-500 display-500--dark",
+              typographyVariants({
+                variant: "h2",
+              })
+            )}
+          >
+            Access free learning resources
+          </h2>
         </div>
         <div class="courses-wrap">
           <div class="course-row">
             <div class="course-col">
               <div class="course-card">
-                <div id="w-node-_2f29de63-530e-b7e7-f56f-84d0113546d7-1d2a5c10" class="course-card__img-wrap">
-                  <img src="/images/certification/image-learnings.svg" loading="lazy" alt="" class="cover-image" />
-                </div>
+                <img src="/images/certification/image-learnings.svg" loading="lazy" alt="" class="cover-image" />
                 <div class="course-card__content">
                   <div class="course-card_top">
                     <h3 class="course-card_h">Chainlink Developer Bootcamps</h3>
@@ -171,16 +185,14 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
             </div>
             <div class="course-col">
               <div class="course-card">
-                <div class="course-card__img-wrap">
-                  <img
-                    src="/images/certification/Imagedevhubvideo.png"
-                    loading="lazy"
-                    sizes="(max-width: 560px) 100vw, 560px"
-                    srcset="/images/certification/Imagedevhubvideo-p-500.png 500w, /images/certification/Imagedevhubvideo.png 560w"
-                    alt=""
-                    class="cover-image"
-                  />
-                </div>
+                <img
+                  src="/images/certification/Imagedevhubvideo.png"
+                  loading="lazy"
+                  sizes="(max-width: 560px) 100vw, 560px"
+                  srcset="/images/certification/Imagedevhubvideo-p-500.png 500w, /images/certification/Imagedevhubvideo.png 560w"
+                  alt=""
+                  class="cover-image"
+                />
                 <div class="course-card__content">
                   <div class="course-card_top">
                     <h3 class="course-card_h">DevHub Videos</h3>
@@ -200,16 +212,14 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
             </div>
             <div class="course-col">
               <div class="course-card">
-                <div class="course-card__img-wrap">
-                  <img
-                    src="/images/certification/Imagedevhubresources.png"
-                    loading="lazy"
-                    sizes="(max-width: 560px) 100vw, 560px"
-                    srcset="/images/certification/Imagedevhubresources-p-500.png 500w, /images/certification/Imagedevhubresources.png 560w"
-                    alt=""
-                    class="cover-image"
-                  />
-                </div>
+                <img
+                  src="/images/certification/Imagedevhubresources.png"
+                  loading="lazy"
+                  sizes="(max-width: 560px) 100vw, 560px"
+                  srcset="/images/certification/Imagedevhubresources-p-500.png 500w, /images/certification/Imagedevhubresources.png 560w"
+                  alt=""
+                  class="cover-image"
+                />
                 <div class="course-card__content">
                   <div class="course-card_top">
                     <h3 class="course-card_h">DevHub Resources</h3>
@@ -269,7 +279,7 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
     grid-template-columns: 1fr 1fr;
     grid-auto-columns: 1fr;
     width: 100%;
-    max-width: 1264px;
+    max-width: 1290px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 32px;
@@ -400,8 +410,7 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
   .btn.btn-secondary {
     color: #0847f7;
     background-color: #fff;
-    border-width: 1px;
-    border-color: #639cff;
+    border: 1px solid #639cff;
     transition:
       background-color 0.3s,
       border-color 0.3s,
@@ -507,25 +516,27 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
     background-color: #fff;
     flex-flow: column;
     flex: 1;
-    min-width: 325.33px;
-    padding: 16px 0 24px;
+
+    padding: 16px;
     display: flex;
   }
 
   .course-card_top {
     margin-top: 0;
-    padding: 16px 24px 24px;
   }
 
   .course-card_h {
+    color: #1a2b6b;
     width: 325.33px;
     margin-top: 0;
+    margin-bottom: 10px;
     font-size: 22px;
     font-weight: 500;
     line-height: 28px;
   }
 
   .course-card__details {
+    color: #0c162c;
     flex-flow: wrap;
     justify-content: flex-start;
     align-items: center;
@@ -534,10 +545,10 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
   }
 
   .course-card_btn-wr {
-    width: 325.33px;
     height: 40px;
     margin-left: auto;
     margin-right: auto;
+    width: 90%;
   }
 
   .course-col {
@@ -583,8 +594,6 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
     align-items: stretch;
     width: 1200px;
     max-width: 1200px;
-    height: 473px;
-    max-height: 473px;
     margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
@@ -594,17 +603,13 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
 
   .cover-image {
     box-sizing: border-box;
-    aspect-ratio: auto;
     object-fit: cover;
     width: 100%;
     height: auto;
+    aspect-ratio: 16/9;
     margin-top: 0;
     padding-bottom: 0;
     padding-right: 0;
-    display: block;
-    position: absolute;
-    inset: 0%;
-    overflow: visible;
   }
 
   /* Accordion */
@@ -615,6 +620,7 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
     margin-bottom: 0;
     margin-right: 24px;
     font-size: 28px;
+    font-weight: 700;
     line-height: 32px;
   }
 
@@ -775,8 +781,8 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
     }
 
     .cont {
-      padding-left: 16px;
-      padding-right: 16px;
+      padding-left: 24px;
+      padding-right: 24px;
     }
 
     .demo-h-wrap {
@@ -832,11 +838,6 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
       flex-direction: column;
     }
 
-    .course-card_h,
-    .course-card_btn-wr {
-      width: 100%;
-    }
-
     .display-500 {
       font-size: 2rem;
     }
@@ -863,7 +864,7 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
     }
 
     .display-500 {
-      font-size: 1.75rem;
+      font-size: 2rem;
     }
 
     .acad-acc-item__h {
@@ -874,23 +875,21 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
 </style>
 
 <style>
-  .css-active-accordion-tab .acad-acc-item.acad-acc-item--active .acad-acc-item__desc {
+  .acad-acc-item.acad-acc-item--active .acad-acc-item__desc {
     height: auto;
     padding-bottom: 24px;
   }
-  .css-active-accordion-tab .acad-acc-item.acad-acc-item--active .acad-acc-item__h {
+  .acad-acc-item.acad-acc-item--active .acad-acc-item__h {
     color: white;
   }
-  .css-active-accordion-tab .acad-acc-item.acad-acc-item--active .acad-acc-item__arr {
+  .acad-acc-item.acad-acc-item--active .acad-acc-item__arr {
     transform: rotate(-180deg);
   }
-  .css-active-accordion-tab .acad-acc-item__top:hover .acad-acc-item__h {
+  .acad-acc-item__top:hover .acad-acc-item__h {
     color: white;
     transition: 200ms ease;
   }
 </style>
-
-<div class="css-active-accordion-tab"></div>
 
 <script>
   // Accordion functionality
