--- a/src/components/ChangelogSnippet/ChangelogSnippet.astro
+++ b/src/components/ChangelogSnippet/ChangelogSnippet.astro
@@ -55,7 +55,7 @@ if (appId && apiKey) {
           Changelog
         </Typography>
 
-        <a href="https://dev.chain.link/changelog" class={styles.arrow}>
+        <a href="/changelog" class={styles.arrow}>
           <SvgArrowRight2 height={12} width={12} />
         </a>
       </header>
