--- a/src/pages/changelog/index.astro
+++ b/src/pages/changelog/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "~/layouts/BaseLayout.astro"
-import * as CONFIG from "../config"
+import * as CONFIG from "../../config"
 import { Typography } from "@chainlink/blocks"
 
 import { getSecret } from "astro:env/server"
