--- a/src/components/TryItOut/styles.module.css
+++ b/src/components/TryItOut/styles.module.css
@@ -72,7 +72,7 @@
 .image {
   width: 100%;
   max-height: 412px;
-  overflow: hidden;
+  overflow-y: auto;
   border-bottom: 1.5px solid var(--stepper-counter-pending-foreground);
   border-radius: 6.317px;
 }
