--- a/src/pages/changelog/[...id].astro
+++ b/src/pages/changelog/[...id].astro
@@ -66,7 +66,7 @@ const pageTitle = `Changelog and Releases | ${CONFIG.SITE.title}`
     </div>
 
     <div class="changelog-content">
-      <ChangelogCard item={log} showBorder={false} autoExpand={true} />
+      <ChangelogCard item={log} showBorder={false} autoExpand={true} showCopyButton={false} disableHover={true} />
     </div>
   </main>
 </BaseLayout>
